# ruslanmv.github.io

./: .env.example  .gitattributes  .gitignore  CNAME  CNAME2  Gemfile  LICENSE  Makefile  README.md  _config.yml  ads.txt  index.html  mailru-domainqCKpWVNUIejbEteg.html  podcast.xml  pyproject.toml  requirements.txt  robots.txt  site.webmanifest  sitemap.xml
_data/: audio_manifest.example.json  audio_manifest.json  audio_settings.yml  courses.yml  guides.yml  navigation.yml  podcast.yml  sliders.yml
_includes/: advertisements.html  archive-single.html  article-adsense.html  author-profile-custom-links.html  author-profile.html  contact-form.html  footer.html  google-adsense.html  guide-styles.html  head.html  home-highlights.html  hub-styles.html  listen-player.html  listen.html  masthead.html  seo.html  social-share.html  tutorial-card.html
_layouts/: contact.html  course.html  courses.html  default.html  essay.html  essays.html  guide.html  guides.html  labs.html  learn.html  post.html  privacy.html  projects-all.html  projects.html  single.html
_pages/: 404.md  _blog-template.md  _essay-template.md  about.md  alive-system.md  audio-smoke-test.md  blog.md  certifications.md  contact.md  courses.md  essays.md  gitpilot.md  guides.md  hub-ai-agents.md  hub-generative-ai.md  hub-hugging-face.md  hub-watsonx.md  labs.md  learn.md  personas-and-memory.md  podcast.md  privacy.md  projects-all.md  projects.md  publications.md  talks.md
_posts/: 2020-07-26-time-has-come.md  2020-07-27-How-to-create-a-List-Array-and-Matrix-in-Python.md  2020-07-27-How-to-download-files-or-folders-in-gdrive-in-python.md  2020-07-27-How-to-enter-to-Darkweb-safely.md  (+225 more)
(+165 files in other folders)
